src/containers/Tops/TopSection.css
.Container {
    margin: 0px 4vw 6vw 4vw;
    transform: translateY(-60%);
}

.Container h1 {
    position: absolute;
    top: 10%;
    font-weight: 900;
    font-size: 2vw;
}

.Posters {
    display: flex;
    height: 23vw;
    width: 100%;
}

.Item {
    margin: 5px;
    transition: all 500ms;
    position: relative;
}

.Item img {
    width: 100%;
    height: 100%;
}

.Overlay {
    padding: 1vw;
    position: absolute;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    opacity: 0;
    transition: .5s ease;
    background-color: rgba(0,0,0,0.7);
}

.Item:hover .Overlay {
    opacity: 1;
}

.Item:hover .Description {
    animation-name: textOpacity;
    animation-duration: 1500ms;
    opacity: 1;
}

.Item .Description {
    opacity: 0;
}

.Overlay h2 {
    margin: 0;
    font-size: 1.5vw;
}

.Overlay h3 {
    margin: 0;
    font-size: 1vw;
}

.Overlay p {
    font-size: 0.8vw;
}

@keyframes textOpacity {
    0%   {opacity: 0;}
    25%  {opacity: 0;}
    100% {opacity: 1;}
}

